feat: clean architecture refactor, frontend validation, and polish
Refactor backend into layered architecture with proper separation:
- Extract Repository interface + CsvTransactionRepository for CSV I/O
- Add TransactionService interface + TransactionServiceImpl for business logic
- Introduce CreateTransactionRequest/TransactionResponse DTOs at API boundary
- Make Transaction domain model immutable (final fields, no setters)
- Fix enum naming to UPPER_CASE with @JsonValue/@JsonCreator
- Add /health endpoint, wrap exceptions properly, omit null JSON fields

Improve frontend form validation and UX:
- Add date range validation (10 years ago to today)
- Add account holder name validation (letters, spaces, hyphens, apostrophes)
- Add inline error for negative/zero amounts
- Add Enter key form submission, mobile table scroll
- Remove dollar sign from amount display (matches task spec)

Tests: 29 backend + 16 frontend = 45 total, all passing.

Co-Authored-By: Claude <noreply@anthropic.com>